--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GX0ERWVY1Y"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BL8ND1DJV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GX0ERWVY1Y');
+  gtag('config', 'G-0BL8ND1DJV');
 </script>
     
   <meta charset="UTF-8">
