--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mark-anthony.ca | @edtechxd — education technology + experience design.</title>
     <meta name="description" content="mark-anthony karam, a design educator with a focus on education technology & experience design" />
-    <meta name="keywords" content="graphic design, education, portfolio, podcast, blog, education technology, higher education" />
+    <meta name="keywords" content="Portfolio, Design Education, Creative Tutorials, Graphic Design, UI/UX, Teaching Design, HTML, CSS, Graphic Design, GitHub Pages, Podcast, How'd We get Here?, Blog, Education Technology, EdTech, Experience Design, Mark Karam Resumé, Higher Education, Adobe, InDesign, Editorial, Photoshop, Illustrator, Typography, Figma, Teaching Tools, Design Principles, Templates, Mockups, Prototypes, Web Design, Humber College, Humber Polytechnic" />
     <meta name="author" content="Mark-Anthony Karam, @edtechxd" />
      <!--favicons-->
     <link rel="shortcut icon" href="favicon.ico"> 
