--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
       <div class="menu-item">
         <span>>_Read.cv: experience + education</span>
-        <a href="#" target="_blank"><h2>RESUMÉ</h2></a>
+        <a href="https://read.cv/edtechxd" target="_blank"><h2>RESUMÉ</h2></a>
       </div>
         
         <footer class="menu-footer">
