--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
 <body>
     
  <div id="container">
+<!-- Ruler Markings -->
+<div class="ruler" id="ruler">
+  <div class="ruler-ticks">
+    <div class="ruler-tick"><span>1</span></div>
+    <div class="ruler-tick"><span>2</span></div>
+    <div class="ruler-tick"><span>3</span></div>
+    <div class="ruler-tick"><span>4</span></div>
+    <div class="ruler-tick"><span>5</span></div>
+    <div class="ruler-tick"><span>6</span></div>
+    <div class="ruler-tick"><span>7</span></div>
+    <div class="ruler-tick"><span>8</span></div>
+    <div class="ruler-tick"><span>9</span></div>
+    <div class="ruler-tick"><span>10</span></div>
+    <!-- Extend as needed -->
+  </div>
+</div>     
 <!-- Header -->
   <header class="header">
     <div class="ticker-container">
