--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
       <div class="menu-content">
       <div class="menu-item">
-        <span>>_Medium: blogs + research articles</span>
+        <span>>_Medium: research, blogs + articles</span>
         <a href="https://medium.com/@edtechxd" target="_blank"><h2>JOURNAL</h2></a>
       </div>
       <div class="menu-item">
