--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <meta property="og:site_name" content="Mark-Anthony Karam" />
     <meta
       property="og:description"
-      content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+      content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mark-anthony.ca" />
