--- a/index.html
+++ b/index.html
@@ -57,26 +57,8 @@
     />
     <meta
       itemprop="image"
-      content="http://www.mark-anthony.ca/images/logo-black.svg"
+      content="http://www.mark-anthony.ca/images/mark-anthony-karam-edtechxd-social-share-image-portfolio-website.jpg"
     />
-
-    <!-- FACEBOOK META TAGS -->
-    <meta property="og:title" content="Mark-Anthony Karam. mark-anthony.ca | @edtechxd — design educator portfolio" />
-    <meta property="og:site_name" content="Mark-Anthony Karam" />
-    <meta
-      property="og:description"
-      content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mark-anthony.ca" />
-    <meta
-      property="og:image"
-      content="http://www.mark-anthony.ca/images/logo-black.svg"
-    />
-    <meta property="og:image:type" content="image/svg" />
-    <meta property="og:image:alt" content="Mark-Anthony Karam logo" />
-    <meta property="og:image:width" content="488" />
-    <meta property="og:image:height" content="488" />
     
   <!-- TWITTER META TAGS -->
   <meta name="twitter:card" content="summary_large_image" />
