--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="ajJnMPESxMGJuiv1TgtFvbb4yatFuCtfTJvL6-8rh5I">
-  <title>mark-anthony.ca | @edtechxd — Mark-Anthony Karam, design folio.</title>
-    <meta name="description" content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers." />
+  <title>mark-anthony.ca | @edtechxd — Mark-Anthony Karam: design educator, portfolio, and tutorials</title>
+    <meta name="description" content="Hello, world! I'm Mark-Anthony Karam, a design educator focused on EdTech & UX. Explore tutorials, templates, articles, downloads, or book a portfolio review!" />
     <meta name="keywords" content="Portfolio, Design Education, Creative Tutorials, Graphic Design, UI/UX, Teaching Design, HTML, CSS, Graphic Design, GitHub Pages, Podcast, How'd We get Here?, Blog, Education Technology, EdTech, Experience Design, Mark Karam Resumé, Higher Education, Adobe, InDesign, Editorial, Photoshop, Illustrator, Typography, Figma, Teaching Tools, Design Principles, Templates, Mockups, Prototypes, Web Design, Humber College, Humber Polytechnic" />
     <meta name="author" content="Mark-Anthony Karam, @edtechxd" />
     
   <!-- OPEN GRAPH META TAGS -->
   <meta property="og:title" content="Mark-Anthony Karam @edtechxd — design educator portfolio" />
-  <meta property="og:description" content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers." />
+  <meta property="og:description" content="Hello, world! I'm Mark-Anthony Karam, a design educator focused on EdTech & UX. Explore tutorials, templates, articles, downloads, or book a portfolio review!" />
   <meta property="og:image" content="http://www.mark-anthony.ca/images/mark-anthony-karam-edtechxd-social-share-image-portfolio-website.jpg" />
   <meta property="og:url" content="https://mark-anthony.ca" />
   <meta property="og:type" content="website" />
@@ -53,7 +53,7 @@
     <meta itemprop="name" content="Mark-Anthony Karam" />
     <meta
       itemprop="description"
-      content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers."
+      content="Hello, world! I'm Mark-Anthony Karam, a design educator focused on EdTech & UX. Explore tutorials, templates, articles, downloads, or book a portfolio review!"
     />
     <meta
       itemprop="image"
@@ -63,7 +63,7 @@
   <!-- TWITTER META TAGS -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Mark-Anthony Karam @edtechxd — design educator portfolio" />
-  <meta name="twitter:description" content="Hello, world! I'm Mark-Anthony Karam, a design educator with a focus on education technology & experience design. I craft digital downloads and curate content for designers." />
+  <meta name="twitter:description" content="Hello, world! I'm Mark-Anthony Karam, a design educator focused on EdTech & UX. Explore tutorials, templates, articles, downloads, or book a portfolio review!" />
   <meta name="twitter:image" content="http://www.mark-anthony.ca/images/mark-anthony-karam-edtechxd-social-share-image-portfolio-website-x.jpg" />
     
      <!--favicons-->
