--- a/product/graphic-design-pdf-portfolio-template/index.html
+++ b/product/graphic-design-pdf-portfolio-template/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; https://edtechxd.gumroad.com/l/graphic-design-pdf-portfolio">
-  <title>Redirecting... Gumroad</title>
+  <title>Redirecting... Gumroad Graphic Design PDF Portfolio Template</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://edtechxd.gumroad.com/l/graphic-design-pdf-portfolio">link</a>.</p>
