--- a/product/ui-ux-sketch-pad-sheets/index.html
+++ b/product/ui-ux-sketch-pad-sheets/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://edtechxd.gumroad.com/l/ui-ux-sketch-sheets">
-  <title>Redirecting... Gumroad</title>
+  <title>Redirecting... Gumroad UI UX Wireframe Sketch Book Note Book</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://edtechxd.gumroad.com/l/ui-ux-sketch-sheets">link</a>.</p>
