--- a/product/ux-user-persona-template-pdf/index.html
+++ b/product/ux-user-persona-template-pdf/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; https://edtechxd.gumroad.com/l/ux-user-persona-template">
-  <title>Redirecting... Gumroad</title>
+  <title>Redirecting... Gumroad UI UX Design User Persona Template</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://edtechxd.gumroad.com/l/ux-user-persona-template">link</a>.</p>
