--- a/modular-grids-indesign/index.html
+++ b/modular-grids-indesign/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0;url=https://medium.com/@edtechxd/modular-grids-indesign-4c5c84a1a3ac">
-  <title>Redirecting... Medium</title>
+  <title>Redirecting... Medium: InDesign 101 A Beginner's Guide to Modular Grids using Adobe InDesign</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://medium.com/@edtechxd/modular-grids-indesign-4c5c84a1a3ac">link</a>.</p>
