--- a/file-management-folder-structure-infographic-for-designers/index.html
+++ b/file-management-folder-structure-infographic-for-designers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; https://medium.com/@edtechxd/file-management-folder-structure-for-designers-c90970e092fe">
-  <title>Redirecting... Medium</title>
+  <title>Redirecting... Medium: File Management and Folder Structure Infographic for Designers</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://medium.com/@edtechxd/file-management-folder-structure-for-designers-c90970e092fe">link</a>.</p>
