--- a/how-to-create-and-print-a-saddle-stitched-calendar-using-adobe-indesign-cc/index.html
+++ b/how-to-create-and-print-a-saddle-stitched-calendar-using-adobe-indesign-cc/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0;url=https://medium.com/@edtechxd/how-to-create-a-saddle-stitched-calendar-using-adobe-indesign-e141db150a45">
-  <title>Redirecting... Medium</title>
+  <title>Redirecting... Medium: How to Create a Saddle Stitched Calendar Using Adobe InDesign Impositions</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://medium.com/@edtechxd/how-to-create-a-saddle-stitched-calendar-using-adobe-indesign-e141db150a45">link</a>.</p>
