--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; https://www.youtube.com/@edtechxd">
-  <title>Redirecting...YouTube</title>
+  <title>Redirecting...YouTube: Mark-Anthony Karam Graphic Design Tutorials</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://www.youtube.com/@edtechxd">link</a>.</p>
