--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; https://www.behance.net/edtechxd/">
-  <title>Redirecting...Behance</title>
+  <title>Redirecting...Behance: Mark-Anthony Karam Graphic Design Portfolio</title>
 </head>
 <body>
   <p>If you are not redirected automatically, follow this <a href="https://www.behance.net/edtechxd/">link</a>.</p>
