--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
              <li><a href="https://calendly.com/edtechxd-tutor" title="Portfolio Reviews & Tutoring" target="_blank" aria-label="Book Design Tutoring and Portfolio Reviews with Mark-Anthony Karam on Calendly (opens in a new tab)"><img src="images/graduation-cap-solid.svg" alt="calendly tutor icon"></a></li>   
             </ul>
             
-            <p><span>Email me:</span> <a href="mailto:edtechxd@gmail.com?subject=Hey Mark! 👋&body=Greetings!%0A%0A" target="_blank" aria-label="Email Mark-Anthony Karam (opens in a new tab)">edtechxd@gmail.com</a></p>
+            <p><span>Email me:</span> <a href="mailto:edtechxd@gmail.com?subject=Hey Mark! 👋&body=Greetings!%0A%0A" title="Email Me" target="_blank" aria-label="Email Mark-Anthony Karam (opens in a new tab)">edtechxd@gmail.com</a></p>
         </footer>
           
     </div>
