--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         <a href="https://edtechxd.gumroad.com/" target="_blank" aria-label="Download Digital Products on Gumroad (opens in a new tab)"><h2>SHOP</h2></a>
       </div>
       <div class="menu-item">
-        <span>>_Read.cv: experience + education</span>
-        <a href="https://read.cv/edtechxd" target="_blank" aria-label="View Resumé on Read.cv (opens in a new tab)"><h2>RESUMÉ</h2></a>
+        <span>>_Resumé.cv: experience + education</span>
+        <a href="https://edtechxd.notion.site/resume?pvs=4" target="_blank" aria-label="View Resumé on Notion (opens in a new tab)"><h2>RESUMÉ</h2></a>
       </div>
         
         <footer class="menu-footer">
